--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
-		<script src="https://kit.fontawesome.com/1c771726fb.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/1c771726fb.js" crossorigin="anonymous"></script>
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 
@@ -17,12 +17,12 @@
 </head>
 
 <body>
-	<div class="topp" style="display:none"> 
-	<div class="top" >
-		<div><i class="fa-solid fa-pen-to-square"></i>Mode édition</div>
-		<button class="btn">Publier les changement</button>
+	<div class="topp" style="display:none">
+		<div class="top">
+			<div><i class="fa-solid fa-pen-to-square"></i>Mode édition</div>
+			<button class="btn">Publier les changement</button>
+		</div>
 	</div>
-    </div>
 	<header>
 		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 		<nav>
@@ -40,19 +40,21 @@
 		<section id="introduction">
 			<figure>
 				<img src="./assets/images/sophie-bluel.png" alt="">
-				<a href="#modale1" class="js-modale" style="display: none;"><i class="fa-solid fa-pen-to-square"></i>Modifier</a>
-				<aside id="modale1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display:none;">
-                   <div class="modal-wrapper js-stop">
-					<button class="js-modal-close">Fermer la boite modale</button>
-                    <h1 id="titlemodal">La gallerie photo</h1>
-					<div class="album">
+				<a href="#modale1" class="js-modale" style="display: none;"><i
+						class="fa-solid fa-pen-to-square"></i>Modifier</a>
+				<aside id="modale1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal"
+					style="display:none;">
+					<div class="modal-wrapper js-stop">
+						<button class="js-modal-close"><i class="fa-sharp fa-solid fa-xmark"></i></button>
+						<h1 id="titlemodal">La gallerie photo</h1>
+						<div class="album">
 
+						</div>
+						<button class="ajoute">Ajouter une photo</button>
+						<div class="supprime">
+							<p>Supprimer la gallerie</p>
+						</div>
 					</div>
-				    <button class="ajoute">Ajouter une photo</button>
-					<div class="supprime">
-						<p>Supprimer la gallerie</p>
-					</div>
-				   </div>
 				</aside>
 			</figure>
 			<article>
@@ -75,16 +77,33 @@
 					<aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal"
 						style="display: none;">
 						<div class="modal-wrapper js-stop-modal">
-							<button class="js-close-modal">Fermer la boite modale</button>
+							<button class="js-close-modal"><i class="fa-sharp fa-solid fa-xmark"></i></button>
 							<h1 id="titlemodal">Gallerie photo</h1>
 							<div class="photo">
 
 							</div>
-							<button class="ajouter">Ajouter une photo</button>
+							<a href="#modal3" class="js-modal3"><button class="ajouter">Ajouter une photo</button></a>
+
 							<div class="supprimer">
 								<p>Supprimer la gallerie</p>
 							</div>
 
+					</aside>
+					<aside id="modal3" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;" >
+						<div class="modal-wrapper js-stop3-modal">
+
+							<i class="fa-sharp fa-solid fa-arrow-left"></i>
+							<button class="js-close3-modal"><i class="fa-sharp fa-solid fa-xmark"></i></button>
+
+							<h1 id="titlemodal">Ajout photo</h1>
+							<div class="espacePhoto">
+								
+								<i class="fa-thin fa-image"></i>
+
+
+		
+							</div>
+						</div>
 					</aside>
 				</div>
 
@@ -93,15 +112,15 @@
 			<div class="boutons">
 				<button class="elts All">Tous</button>
 				<button class="elts objet">Objets</button>
-				<button class="elts">Appartements</button>
-				<button class="elts">Hotels & Restaurant</button>
+				<button class="elts appart">Appartements</button>
+				<button class="elts hotel">Hotels & Restaurant</button>
 				<button class="elts efface">Effacer le contenu</button>
 			</div>
 
 
 
 			<div class="gallery">
-				<figure>
+				<!-- <figure>
 					<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
 					<figcaption>Abajour Tahina</figcaption>
 				</figure>
@@ -144,7 +163,7 @@
 				<figure>
 					<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 					<figcaption>Hotel First Arte - New Delhi</figcaption>
-				</figure>
+				</figure> -->
 			</div>
 		</section>
 		<section id="contact">
