suppression des lignes de commandes

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -97,10 +97,11 @@
 									class="fa-sharp fa-solid fa-xmark"></i></button>
 
 							<h1 id="titlemodal">Ajout photo</h1>
+							<form action="">
 							<div class="photEnvoi">
 								<div class="espacePhoto">
 
-									<div><i class="fa-sharp fa-regular fa-image"></i></div>
+									<div> <i class="fa-sharp fa-regular fa-image"></i></div>
 									<div class="esp"><button> + Ajouter photo</button></div>
 									<p class="esp">jpg,png:4mo max</p>
 								</div>
@@ -115,6 +116,7 @@
 							</div>
 							
 								<button class="val">Valider</button>
+							</form>
 						</div>
 					</aside>
 
