--- a/login/login.Html
+++ b/login/login.Html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+		rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="../FrontEnd/assets/style.css">
-	<script  defer src="login.js"></script>
-	
+	<script defer src="login.js"></script>
+
 </head>
-<body>
-<header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
-			<li><img src="../FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
-<form class="sign-in-form" action="#" method="POST">
+
+<body id="loginPage">
+	<header>
+		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+		<nav>
+			<ul>
+				<li>projets</li>
+				<li>contact</li>
+				<li>login</li>
+				<li><img src="../FrontEnd/assets/icons/instagram.png" alt="Instagram"></li>
+			</ul>
+		</nav>
+	</header>
+	<form class="sign-in-form" action="#" method="POST">
 
 		<h1 class="main-title">LOgin</h1>
-	<div class="form-group">
-				<label for="email">Votre addresse e-mail</label>
-				<input name="email" id="user-email" type="email" placeholder="email@example.com">
-				<span class="form-text-error hidden user-email-error-msg">L'e-mail n'est pas correct</span>
-	</div>
-	<div class="form-group">
-				<label for="password">Votre mot de passe</label>
-				<input name="password" id="user-password" type="password" placeholder="mot de passe">
-				<span class="form-text-error hidden  user-password-error-msg">Le mot de passe n'est pas correct,veuillez entrer le bon mot de pass</span>
-				<span class="form-text-error hidden  user-not-error-msg">Entrez des identifiants corrects</span>
-	</div>
-			<div>
-				<button class="submit-btn" type="submit">Se connecter</button>
-			</div>
-		
-		</form>
-		<div class="items">
-
+		<div class="form-group">
+			<label for="email" class="form-group">Votre addresse e-mail</label>
+			<input name="email" id="user-email" type="email" placeholder="email@example.com" >
+			<span class="form-text-error hidden user-email-error-msg">L'e-mail n'est pas correct</span>
 		</div>
-</div>
+		<div class="form-group">
+			<label for="password" class="form-group">Votre mot de passe</label>
+			<input name="password" id="user-password" type="password" placeholder="mot de passe">
+			<span class="form-text-error hidden  user-password-error-msg">Le mot de passe n'est pas correct,veuillez
+				entrer le bon mot de pass</span>
+			<span class="form-text-error hidden  user-not-error-msg">Entrez des identifiants corrects</span>
+		</div>
+		<div>
+			<button class="submit-btn" type="submit">Se connecter</button>
+		</div>
+
+	</form>
 </body>
+
 </html>
